--- a/Cadastro.html
+++ b/Cadastro.html
@@ -6,13 +6,25 @@
     <title>Formulario de Cadastro</title>
 </head>
 <body>
-        <input type="text" placeholder="Seu nome" />
-    <br />
-        <label for="emial"> Seu e-mail</label>
-    <br />
+    <form>
+        <label="nome">Digite Seu Nome</ilabel>
+            <br />
+        <input placeholder="" nome type="text">
+            <br />
+        <label="emial">Digite Seu e-mail</ilabel>
+            <br />
         <input id="emial" type="email" />
-    <br />
-        <input type="password" placeholder="Digite sua senha" /> 
-    <br />
+            <br />
+        <label="senha">Digite Sua Senha</label>
+            <br />
+        <input id="password" type="Senha" /> 
+            <br />
+            <br />
+    <button type="submit">
+            Enviar
+    </button><button type="reset">
+            Limpar
+    </button>
+    </form>
 </body>
 </html>
