--- a/Cadastro.html
+++ b/Cadastro.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <form>
-        <label="nome">Digite Seu Nome</ilabel>
+        <label="nome">Digite Seu Nome</label>
             <br />
         <input placeholder="" nome type="text">
             <br />
-        <label="emial">Digite Seu e-mail</ilabel>
+        <label="emial">Digite Seu e-mail</label>
             <br />
         <input id="emial" type="email" />
             <br />
