--- a/Cadastro.html
+++ b/Cadastro.html
@@ -17,7 +17,7 @@
             <br />
         <label="senha">Digite Sua Senha</label>
             <br />
-        <input id="password" type="Senha" /> 
+        <input id="senha" type="password" /> 
             <br />
             <br />
     <button type="submit">
